# ml-boilerplate

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yml  testing.yml
ml_boilerplate/: main.py
test/: test_ml_boilerplate.py
